# ModelForge

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
backend/: api_routes.py  auth.py  database.py  main.py  model_manager.py  resource_monitor.py  worker_controller.py
backend/tests/: test_api.py  test_auth_advanced.py  test_features_v2.py
backend/workers/: llama_cpp_worker.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/dashboard/: Dashboard.jsx
frontend/models/: ModelManager.jsx
frontend/playground/: Playground.jsx
frontend/src/: App.jsx  Usage.jsx  UserManagement.jsx  api.js
modelforge/: cli.py
modelforge/backend/: api_routes.py  database.py  main.py  model_manager.py  resource_monitor.py  worker_controller.py
modelforge/config/: models.json
modelforge_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
